Soluciones a los problemas en sonar con respecto al expenseController